# utada776

./: .gitignore  CMakeLists.txt  CMakePresets.json  INSTALL_WINDOWS.md  README.md  UBUNTU_GUI_SETUP.md  WINDOWS_GUI_SETUP.md  build.ps1  build.sh
.github/workflows/: ci.yml
include/hello_cross_platform/: platform.h
src/: dicom_viewer.cpp  dicom_viewer.h  gui_app.cpp  gui_app.h  main.cpp  platform.cpp
src/FDK recon/: FDK重建算法说明.md  fdk_dicom_exporter.cpp  fdk_dicom_exporter.h  fdk_main.cpp  fdk_recon.cpp  fdk_recon.h  fdk_types.h  fdk_ui.h
src/bean/: bean.cpp  bean.h
src/dicom/: README.md  dicom_exporter.cpp  dicom_exporter.h  dicom_viewer.cpp  dicom_viewer.h  raw_loader.cpp  raw_loader.h  scan_loader.cpp  scan_loader.h
src/pps/: pps.cpp  pps.h
src/registration/: REGISTRATION_ALGORITHM_CN.md  compatibility.cpp  compatibility.h  registration.cpp  registration.h  registration_main.cpp  registration_types.h  registration_ui.h  simplex.cpp  simplex.h  transform.cpp  transform.h  updatable.cpp  updatable.h
src/volume/: raw_volume_loader_dialog.cpp  raw_volume_loader_dialog.h  scan_volume_loader_dialog.cpp  scan_volume_loader_dialog.h
tests/: bean_test.cpp  dicom_viewer_test.cpp  gui_app_test.cpp  hello_core_test.cpp
